--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,7 +4,7 @@ en:
     standup_started: Standup has started.
     standup_welcome: Welcome to standup! Type "-Start" to get started.
 
-    welcome: Good morning <@%{user}>, Welcome to daily standup! Are you ready to begin? ('-yes', or '-skip')
+    welcome: What up Gangster <@%{user}>, Welcome to daily standup! Are you ready to begin? ('-yes', or '-skip')
     bot_died: "<!here|here> The bot was killed by someone :sob:, please restart the standup to continue."
 
     skip: <@%{user}>, I'll get back to you at the end of standup.
