--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,25 +4,25 @@ en:
     standup_started: Standup has started.
     standup_welcome: Welcome to standup! Type "-Start" to get started.
 
-    welcome: What up Gangster <@%{user}>, Welcome to daily standup! Are you ready to begin? ('-yes', or '-skip')
+    welcome: What up gangster <@%{user}>, Welcome to weekly re-cap! After we've finished I'll create a summary for us all. Ready? ('-yes', or '-skip')
     bot_died: "<!here|here> The bot was killed by someone :sob:, please restart the standup to continue."
 
-    skip: <@%{user}>, I'll get back to you at the end of standup.
+    skip: <@%{user}>, I'll get back to you at the end of recap.
     not_available: <@%{user}> is not available.
 
     answer_saved: Your answer has been saved.
 
-    wait_your_turn: <@%{user}> Please, Wait for your turn or the end of the standup.
-    already_submitted: You have already submitted a standup for today, thanks! <@%{user}>
+    wait_your_turn: <@%{user}> Please, Wait for your turn or the end of the recap.
+    already_submitted: You have already submitted a recap for today, thanks! <@%{user}>
 
     help: |
       Standup-bot help.
            Admin Commands.
                  • -start                                   Begin Standup.
-                 • -vacation: @user          Skip users standup for the day.
-                 • -skip: @user                    Place user at the end of standup.
-                 • -n/a: @user                       Skip users standup for the day.
-                 • -quit-standup                 Quit standup.
+                 • -vacation: @user          Skip users recap for the day.
+                 • -skip: @user                    Place user at the end of recap.
+                 • -n/a: @user                       Skip users recap for the day.
+                 • -quit-standup                 Quit recap.
            User Commands.
                  • -yes                                       Begin your standup.
                  • -skip                                     Skip your standup until the end of standup.
@@ -30,7 +30,7 @@ en:
                  • -delete: #(1,2,3)             Delete your answer for the day.
 
     quit: Quiting Standup
-    resume: That concludes our standup. For a recap visit %{url}
+    resume: That concludes our recap. For a summary clicker here: %{url}
 
   settings:
     index:
